--- a/templates/login-page.html
+++ b/templates/login-page.html
@@ -49,4 +49,5 @@
 {% endblock %}
 {% block scripts %}
     {{super()}}
+    <script src="{{ url_for('static', filename='js/login.js') }}"></script>
 {% endblock %}
